Set up contact form and finish projects section

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
   --color-side: 192, 192, 192;
   --color-middle: 255, 255, 255;
+  --background-gradient: linear-gradient(to right, #c0c0c0, #ffffff);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,12 +21,7 @@
 
 body {
   /* color: rgb(var(--foreground-rgb)); */
-  background: linear-gradient(
-    to right,
-    rgb(var(--color-side)),
-    rgb(var(--color-middle)),
-    rgb(var(--color-side))
-  );
+  background: var(--background-gradient);
 }
 
 @layer utilities {
