Finish base portfolio website

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,7 @@
 body {
   /* color: rgb(var(--foreground-rgb)); */
   background: var(--background-gradient);
+  overflow-x: hidden;
 }
 
 @layer utilities {
